fixed entity tap highlight on mobile

--- a/src/Style/style.sass
+++ b/src/Style/style.sass
@@ -61,6 +61,7 @@ main
     transition: transform $player-move-duration ease-in-out
 
 .entity
+    -webkit-tap-highlight-color: transparent
     transition: transform $player-move-duration ease-in-out
 
     .content
